# SPU---processor

./: .gitignore  CMakeLists.txt  asm.sh  output  spu.sh
assembler/: CMakeLists.txt  makefile
assembler/data/: bytecode.txt
assembler/programms/: fibo.txt  kvadratka.txt
assembler/src/: argument_parsing.cpp  asm_arrays.cpp  assembler.cpp  bytecode_funcs.cpp  bytecode_gen.cpp  commands.cpp  compiler.cpp  fileRead.cpp  graphics.cpp  labels.cpp  main.cpp  options_parsing.cpp  tokenization.cpp
assembler/src/include/: argument_parsing.h  asm.h  asm_arrays.h  bytecode_funcs.h  bytecode_gen.h  commands.h  compiler.h  fileRead.h  graphics.h  labels.h  options_parsing.h  tokenization.h
file_reading/: CMakeLists.txt  file_reading.h
logging/: CMakeLists.txt  log.cpp  log.h
old/: new_processor.txt
old/src/: ALU.cpp  SPU_logs.cpp  cmd_read.cpp  switch.cpp
old/src/include/: JMP_cmds.h  SPU_logs.h  SPU_struct.h  arg_handling.h  cmd_read.h  switch.h
processor/: CMakeLists.txt  VCore_runner.cpp  VMachine.cpp  cmdline_options.cpp  main.cpp  makefile
processor/include/: VCore.h  cmdline_options.h  return_codes.h  virtual_machine.h
processor/src/: JMP_cmds.cpp  arg_handling.cpp  main.cpp  processor.cpp  processor.h
processor/src/include/: ALU.h
programms/: asm_test.txt  factorial.txt  fibo.txt  graphics_test.txt  kvadratka.txt
programms/graphical/: pic.txt
stack/src/: CMakeLists.txt  stack.h  stack_itern_func.hpp  stack_type_funcs.cpp
